--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-table": "8.21.3",
     "bcryptjs": "2.4.3",
     "cloudinary": "2.8.0",
+    "cookie": "^1.1.1",
     "date-fns": "4.1.0",
     "formidable": "3.5.4",
     "ioredis": "5.3.2",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
+    "@types/cookie": "^1.0.0",
     "@types/formidable": "^3.4.6",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
@@ -40,7 +42,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
     "prisma": "6.16.2",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "3.4.0",
     "typescript": "5.1.6"
   },
   "packageManager": "pnpm@10.16.1"
