--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@prisma/client": "6.16.2",
     "@tanstack/react-table": "8.21.3",
+    "@uploadthing/react": "^7.3.3",
     "bcryptjs": "2.4.3",
     "cloudinary": "2.8.0",
     "cookie": "^1.1.1",
@@ -29,6 +30,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "3.3.0",
+    "sharp": "^0.34.5",
+    "uploadthing": "^7.7.4",
     "zod": "3.22.4"
   },
   "devDependencies": {
@@ -48,4 +51,3 @@
   },
   "packageManager": "pnpm@10.16.1"
 }
-
