--- a/RaadArenda/package.json
+++ b/RaadArenda/package.json
@@ -16,23 +16,33 @@
     "db:seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@prisma/client": "6.16.2",
+    "@tanstack/react-query": "^5.90.19",
     "@tanstack/react-table": "8.21.3",
     "@uploadthing/react": "^7.3.3",
+    "axios": "^1.13.2",
     "bcryptjs": "2.4.3",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "2.8.0",
+    "clsx": "^2.1.1",
     "cookie": "^1.1.1",
     "date-fns": "4.1.0",
     "formidable": "3.5.4",
+    "framer-motion": "^12.27.0",
     "ioredis": "5.3.2",
     "lucide-react": "0.546.0",
     "next": "14.0.4",
     "react": "18.2.0",
+    "react-day-picker": "^9.13.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.6.0",
     "recharts": "3.3.0",
     "sharp": "^0.34.5",
+    "tailwind-merge": "^3.4.0",
     "uploadthing": "^7.7.4",
-    "zod": "3.22.4"
+    "zod": "3.22.4",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -49,5 +59,8 @@
     "tailwindcss": "3.4.0",
     "typescript": "5.1.6"
   },
-  "packageManager": "pnpm@10.16.1"
+  "packageManager": "pnpm@10.16.1",
+  "engines": {
+    "node": ">=20.0.0"
+  }
 }
