added yandex map fixes, added confirmation page

--- a/RaadArenda/.env.example
+++ b/RaadArenda/.env.example
@@ -17,6 +17,9 @@ CLOUDINARY_CLOUD_NAME=""
 CLOUDINARY_API_KEY=""
 CLOUDINARY_API_SECRET=""
 
+# Yandex Maps
+NEXT_PUBLIC_YANDEX_MAPS_API_KEY=""
+
 # App
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 NODE_ENV="development"
